[package]
name = "yarrl"
version = "0.0.1"
authors = ["Dana Larose <ywg.dana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.33"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[features]
default = ["sdl2/ttf"]
